--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-CDPieMenu
+To use CDPieMenu add following frameworks to your project:
+CoreGraphics
+QuartzCore
+
+
+Feel free to ask any question. You can find my email on my github profile.
